--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.16",
+    "octokit": "^1.7.1",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "stripe": "^9.2.0"
