--- a/package.json
+++ b/package.json
@@ -1,37 +1,28 @@
 {
+  "name": "giftshop",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": ["gift card shop"],
+  "author": "Mihai Culea",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.6",
-    "express": "^4.17.3",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.2",
-    "mongoose": "^6.2.5",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.16",
-    "octokit": "^1.7.1",
-    "passport": "^0.5.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
-    "stripe": "^9.2.0"
-  },
-  "name": "giftcardshop",
-  "version": "3.3.3",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "devStart": "nodemon --signal SIGHUP app.js"
-  },
-  "keywords": [
-    "shop",
-    "full",
-    "stack",
-    "app"
-  ],
-  "author": "Mihai Culea",
-  "license": "ISC",
-  "description": "gift card shop"
+    "sharp": "^0.32.0"
+  }
 }
