--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bson": "^5.2.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
@@ -27,6 +28,5 @@
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "sharp": "^0.32.0"
-  },
-  "devDependencies": {}
+  }
 }
